style.css
body {
    background-color: #deb887;
    margin: 0;
    line-height: 30px;
    }

#mainContainer  {
    width: 100%;
    max-height: 100%;
    text-align: center;
    align-content: center;
    margin-top: 0.5rem
    }

#subContainer {
    width: 97%;
    align-content: center;
    margin: auto;
    border-top-color: rgb(167, 132, 86);
    border-top-style: solid;
    border-top-width: 3px;    
}

#title  {
    background-color:bisque;
    text-align: center;
    height: 3.0rem;
    border-left-color: rgb(167, 132, 86);
    border-left-style: solid;
    border-left-width: 3px;
    border-right-color: rgb(167, 132, 86);
    border-right-style: solid;
    border-right-width: 3px;
    margin:0;
    }

h1  {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 1.4rem;
    color:saddlebrown;
    font-weight: bold;
    text-transform: uppercase;
    text-align: center;
    margin: 0;
    align-content: center;
    padding-top: 0.5rem;
    }

#content {
    min-height: calc(100vh - 305.758px);
    align-content: center;
    border-color: rgb(167, 132, 86);
    border-style: solid;
    border-top-width:  0.85px;
    border-bottom-width: 3px; 
    border-left-width: 2.85px;
    border-right-width: 2.85px;
    }

.grid  {
    width: 100%;
    margin: 0 auto;
    text-align: center;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    
    }
    
    
.row    {
    display: flex;
    margin: auto;        
    width: 100%;
    line-height: 0.75;
    border-top:  0.15px solid rgb(167, 132, 86);
    border-bottom:  0.15px solid rgb(167, 132, 86);
    }

.column {
    background-color: bisque;
    padding: 1rem 0;
    gap: 2px;
    align-content: center;
    border-color:rgb(167, 132, 86);
    border-left-style: solid;
    border-left-width: 0.15px;
    border-right-style: solid;
    border-right-width:0.15px;
    font-size: 1.5rem;
    justify-content: center;   
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    color: bisque;
    cursor: pointer;
    user-select: none;
    width: 100%;
    }

.column:hover {
    background-color: rgb(167, 132, 86);
    color: rgb(167, 132, 86);
    }

.statusBar {
    width: 100%;
    height: 4rem;
    display: flex;
    margin: 0%;
    border-left-color: #a78456;
    border-left-style: solid;
    border-left-width: 0.15px;
    border-right-color: #a78456;
    border-right-style: solid;
    border-right-width: 0.15px;
    border-top-color: #a78456;
    border-top-style: solid;
    border-top-width: 0.85px;
    }

#RemainingTurnsCounter  {
    background-color: bisque;
    text-align: center;
    margin: 0;
    height: 4rem;
    font-size: small;
    border-style: none;
    
    }

h2  {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 0.75rem;
    color:saddlebrown;
    font-weight: bold;
    text-transform: uppercase;
    text-align: center;
    line-height: 0.5rem;
    margin-left: 0.5rem;
    width: 8.0rem; 
    margin-top: 0.5rem;
    }

#turnCounter    {
    background-color:bisque;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    text-align: center;
    margin: 0;
    font-size: 1.5rem;
    line-height: 0.5;
    text-align: center;
    margin-top: 1rem;
    }

#itemList   {background-color:bisque;
    text-align: center;
    font-size: small;
    height: 4rem;
    border-style: none;
    width: 100%;
    }

h3  {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 0.75rem;
    color:saddlebrown;
    font-weight: bold;
    text-transform: uppercase;
    text-align: center;
    line-height: 0.5rem;
    margin-top: 0.5rem;
    }

#howToPlayContainer {
    background-color:bisque;
    text-align: center;
    align-content: center;
    margin: 0;
    height: 4rem;
    text-align: center;
    border-right-color: #a78456;
    border-right-style: solid;
    border-right-width: 2.85px;
    }

#howToPlayModalBtn {
    display: block;
    background: saddlebrown;
    color: #fff;
    border-radius: 50%;
    width: 1.8rem;
    height: 1.8rem;
    line-height: 1rem;
    text-align: center;
    font-size: 1rem;
    font-family: Verdana;
    margin-right: 0.5rem;
    margin-top: 1rem;
    }

.foundTreasuresBar {
    position: relative;
    width: 100%;
    height: 6rem;
    background-image: linear-gradient(to top, #755c3e 0%, #deb887 100%);
    margin-bottom: 0rem;
    border-top: 1px solid rgba(210, 180, 140, 0.3);
    -webkit-background-clip: padding-box;
        background-clip: padding-box; 

    z-index: -1;
    }

svg {
    margin-top: -5rem;
    z-index: 1;
    }

footer {
    background-image: linear-gradient(to top, #209cff 0%, #68e0cf 100%);
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    margin-top: -1rem;
    height: 15rem;
    }

#socials {
    text-align: center;
    margin: auto;
    clear: both
    }

#credit {
    background-color:rgb(255, 255, 255);
    width: 50%;
    text-align: center; 
    margin: auto;
    font-weight: bold;
    font-size: 40%;
    text-transform: uppercase;
    align-content: center;
    border-style:hidden;
    border-radius: 10px;
    clear: both;
    padding: 2px;
    }

#credit a:hover {
    color: rgb(255, 0, 221)
    }

a {
    text-decoration: none;
    }
    

#snackbarChest {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: large;
    visibility: hidden;
    width: 50%;
    background-color: #87fd91;
    color: #000000;
    text-align: center; 
    border-style: solid;
    border-color: green;
    border-radius: 10px; 
    padding: 10px;
    position: fixed;
    z-index: 1;
    left: 23%;
    bottom: 70px;
    align-content: center;
    }
        
#snackbarChest.show {
    visibility: visible;
    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
    However, delay the fade out process for 2.5 seconds */
    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
    animation: fadein 0.5s, fadeout 0.5s 2.5s;
    }

#snackbarGolfClubs {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: large;
    visibility: hidden;
    width: 50%;
    background-color: #87fd91;
    color: #000000;
    text-align: center; 
    border-style: solid;
    border-color: green;
    border-radius: 10px; 
    padding: 10px;
    position: fixed;
    z-index: 1;
    left: 23%;
    bottom: 70px;
    align-content: center;
    }
        
#snackbarGolfClubs.show {
    visibility: visible;
    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
    However, delay the fade out process for 2.5 seconds */
    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
    animation: fadein 0.5s, fadeout 0.5s 2.5s;
    }

    #snackbarSurfboard {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: large;
    visibility: hidden;
    width: 50%;
    background-color: #87fd91;
    color: #000000;
    text-align: center; 
    border-style: solid;
    border-color: green;
    border-radius: 10px; 
    padding: 10px;
    position: fixed;
    z-index: 1;
    left: 23%;
    bottom: 70px;
    align-content: center;
    }
        
#snackbarSurfboard.show {
    visibility: visible;
    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
    However, delay the fade out process for 2.5 seconds */
    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
    animation: fadein 0.5s, fadeout 0.5s 2.5s;
    }
    
/* Animations to fade the snackbar in and out */
@-webkit-keyframes fadein {
    from {bottom: 0; opacity: 0;}
    to {bottom: 70px; opacity: 1;}
    }
    
@keyframes fadein {
from {bottom: 0; opacity: 0;}
    to {bottom: 70px; opacity: 1;}
    }
    
@-webkit-keyframes fadeout {
    from {bottom: 70px; opacity: 1;}
    to {bottom: 0; opacity: 0;}
    }
    
@keyframes fadeout {
    from {bottom: 70px; opacity: 1;}
    to {bottom: 0; opacity: 0;}
    }


/*Top sentence in end of game Modals?*/
h4 {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 200%;
    color:saddlebrown;
    font-weight: bold;
    text-transform: uppercase;
    padding-left: 5%;
    padding-right: 5%;
    text-align: center;
    }  
/*The HTP Modal Close Button*/
.howToPlayClose {
    color: #ff0000;
    float: right;
    font-size: 60px;
    font-weight: bold;
    cursor: pointer;
}


.howToPlayClose:focus {
    color: black;
    text-decoration: none;
    cursor:pointer;
}

/*The winGame Modal Background*/
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;
    overflow: auto;
    background-color: black;
    background-color: rgba(0,0,0,0.4);
}

/*winGame Modal Content Box*/
.modal-content {
    background-color: tan;
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 70%;
    align-self: center;
    border-radius: 10px;
    box-shadow: 5px 5px 15px rgba(0,0,0,.3);
}

/*The Mines Switch*/
.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
    margin: auto;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider.round {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 34px;
}

.slider.round:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 50%;
}

input:checked + .slider {
    background-color: red;
    }

input:focus + .slider {
    box-shadow: 0 0 1px red;
    }

input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
    }

button {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: medium;
    background-color: peru;
    border-radius: 10px;
    cursor: pointer;
    padding: 1%;
    }



p   {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 100%;
     color: saddlebrown;
     text-align: center;

    }

p2  {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
        font-size: 150%;
        color:saddlebrown;
        font-weight: bold;
        text-transform: uppercase;
        padding-left: 5%;
        padding-right: 5%;
        text-align: center;
    }

p3  {
    color: rgb(27, 145, 255);
    }   

